[project]
name = "grpc-image-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flatbuffers>=25.12.19",
    "fpzip>=1.2.5",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
]
